--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.md linguist-detectable
+*.png -linguist-detectable
+*.pdf -linguist-detectable
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
