--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 *.md linguist-detectable
 Docs/Development/* -linguist-detectable
-Images/* -linguist-documentation
-Appendix/* -linguist-documentation
-.obsidian/* -linguist-documentation
+Images/* linguist-documentation
+Appendix/* linguist-documentation
+.obsidian/* linguist-documentation
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
