🔧 (git dotfiles): update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Directories
 **/*尚硅谷*/**
-venv/**
-dist/**
-eggs/**
-spec/**
-.idea/**
-.eggs/**
-.cache/**
-.sync/**
-.config/**
+**/venv/**
+**/dist/**
+**/eggs/**
+**/spec/**
+**/.idea/**
+**/.eggs/**
+**/.cache/**
+**/.sync/**
+**/.config/**
 # .obsidian/**
 
 # General Files
