🔧 (git dotfiles): update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Directories
-**/*尚硅谷*/**
+*尚硅谷*/
 venv/
 dist/
 eggs/
@@ -12,28 +12,28 @@ spec/
 # .obsidian/
 
 # General Files
-**/*.ppt
-**/*.pptx
+*.ppt
+*.pptx
 # **/.pdf
-**/*.docs
+*.docs
 *.docx
-**/*.xls
-**/*.xlsx
-**/*.cvs
-**/*.txt
-**/*.log
-**/*.log.*
-**/*.rar
-**/*.7z
-**/*.zip
-**/*.xz
-**/*.tar
-**/*.gz
-**/*.zst
-**/*.rpm
-**/*.deb
-**/*.xmind
-**/*.mmap
+*.xls
+*.xlsx
+*.cvs
+*.txt
+*.log
+*.log.*
+*.rar
+*.7z
+*.zip
+*.xz
+*.tar
+*.gz
+*.zst
+*.rpm
+*.deb
+*.xmind
+*.mmap
 
 # Compiled Files
 **/*.clas
@@ -41,16 +41,16 @@ spec/
 **/*.test
 
 # Executable Files
-**/*.AppImage
-**/*.exe
-**/*.exe~
-**/*.iso
-**/*.iso.*
-**/*.jar
-**/*.jar.*
-**/*.war
-**/*.war.*
-**/*.ddl
-**/*.dylib
-**/*.so
-**/*.so.*
+*.AppImage
+*.exe
+*.exe~
+*.iso
+*.iso.*
+*.jar
+*.jar.*
+*.war
+*.war.*
+*.ddl
+*.dylib
+*.so
+*.so.*
