--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,7 @@
-Docs/*.md linguist-detectable
+Docs/**.md linguist-detectable
 
 .obsidian/** linguist-documentation
 Images/** linguist-documentation
 Attachment/** linguist-documentation
 
 *.pdf filter=lfs diff=lfs merge=lfs -text
-*.zip filter=lfs diff=lfs merge=lfs -text
