--- a/.github/workflows/calibreapp-image-actions.yml
+++ b/.github/workflows/calibreapp-image-actions.yml
@@ -14,6 +14,9 @@ on:
       - '**.jpeg'
       - '**.png'
       - '**.webp'
+  workflow_dispatch:
+  schedule:
+    - cron: '00 00 * * 1'
 jobs:
   build:
     name: calibreapp/image-actions
