--- a/.github/workflows/pr-label-actions.yml
+++ b/.github/workflows/pr-label-actions.yml
@@ -1,14 +1,16 @@
 # https://github.com/marketplace/actions/labeler
-name: github-labeler-action
+name: github-LABEL-action
 on:
-  - pull_request
-  - workflow_dispatch
+  - pull_request_target
 jobs:
    c3402b10-04b1-4710-8a9c-637de57614b6:
     name: Create labels for PRs
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: label
-        uses: actions/labeler@v5
+        uses: actions/labeler@v5.0.0
         with:
-         path: .github/LABEL/labeler.yml
+         configuration-path: .github/LABEL/labeler.yml
