✨ exclidraw plugin for obsidian

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,6 +9,8 @@
   "showInlineTitle": false,
   "readableLineLength": false,
   "newFileLocation": "current",
-  "attachmentFolderPath": "./",
-  "propertiesInDocument": "visible"
+  "attachmentFolderPath": "Attachments",
+  "propertiesInDocument": "visible",
+  "showUnsupportedFiles": true,
+  "newLinkFormat": "relative"
 }
