--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,13 @@
+*.yml linguist-detectable
+*.yaml linguist-detectable
 *.md linguist-detectable
 
+
 .obsidian/** linguist-documentation
-Images/** linguist-documentation
 Attachment/** linguist-documentation
+Excalidraw/** linguist-documentation
+Images/** linguist-documentation
+
 
 *.pdf filter=lfs diff=lfs merge=lfs -text
+
