--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,12 @@
-*.md linguist-detectable
+*.md            linguist-detectable
+*.py            linguist-detectable
 
 
-.obsidian/** linguist-documentation
-Attachment/** linguist-documentation
-Excalidraw/** linguist-documentation
-Images/** linguist-documentation
-Scripts/** -linguist-documentation
+.obsidian/**    linguist-documentation
+Attachment/**   linguist-documentation
+Excalidraw/**   linguist-documentation
+Images/**       linguist-documentation
+Scripts/**      -linguist-documentation
 
 
-*.pdf filter=lfs diff=lfs merge=lfs -text
-
+*.pdf           filter=lfs diff=lfs merge=lfs -text
